Modernize hash ordering